XP-4461 Content Grid - Right-align the column with checkboxes under mobile resolution * Fixed column padding when the checkbox column is right-aligned * Removed redundant code called on grid selection change

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/browse/content-tree-grid.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/browse/content-tree-grid.less
@@ -10,7 +10,7 @@
       padding-left: 0px;
     }
     .shifted {
-        margin-left: 40px;
+        padding-left: 15px;
     }
   }
 
@@ -27,6 +27,10 @@
 
     &.order .sort-dialog-trigger:before {
       margin-left: 6px;
+    }
+
+    &.slick-cell-checkboxsel:last-child {
+      padding-right: 15px;
     }
   }
 }
